admin/src/components/shared/FeedbackButton/FeedbackButton.css
.feedbackButton {
	display: flex;
	justify-content: center;
	align-items: center;
}

.feedbackButton::part(label) {
	transition: transform var(--scale-animation-duration);
	will-change: transform;
}

.feedbackButton.confirm::part(label),
.feedbackButton.error::part(label) {
	transform: scale(1.8);
}

.feedbackTooltip::part(base) {
	background-color: var(--sl-color-neutral-300);
}

.feedbackTooltip::part(body) {
	background-color: var(--bg-gray);
	border: 1px solid var(--sl-color-neutral-300);
	pointer-events: all;
	padding: 0;
}

.feedbackTooltip::part(base__popup) {
	pointer-events: all;
	box-shadow: var(--sl-shadow-x-large);
}

.feedbackTooltip::part(base__arrow) {
	background-color: var(--bg-gray);
	border: 1px solid var(--sl-color-neutral-300);
	z-index: 10;
	border-right: 0;
	border-bottom: 0;
}

.feedbackTooltip .tooltipContent {
	font-size: 12px;
	padding: 30px 50px 30px 30px;
	position: relative;
	box-shadow: var(--sl-shadow-x-large);
	display: flex;
	gap: 12px;
}

.feedbackTooltip .tooltipContent sl-button {
	display: block;
	margin-top: 8px;
}

.feedbackTooltip .tooltipContent sl-button::part(base) {
	height: unset;
	min-height: unset;
	line-height: unset;
	padding: 2px 0;
}

.feedbackTooltip .tooltipContent sl-button::part(label) {
	font-size: 11px;
}

.feedbackTooltip .tooltipContent .errorIcon {
	color: var(--sl-color-danger-500);
	position: relative;
	top: 4px;
	font-size: 16px;
}

.feedbackTooltip .tooltipContent > .closeIcon {
	position: absolute;
	right: 12px;
	top: 10px;
	cursor: pointer;
}

.feedbackTooltip .tooltipContent .tooltipError {
	user-select: text;
}

.feedbackTooltip .tooltipContent .linkToOverview {
	margin-top: 5px;
}

.feedbackTooltip .tooltipContent .linkToOverview .link {
	color: var(--sl-color-primary-500);
	text-decoration: underline;
	cursor: pointer;
	font-weight: 600;
}

